compiler/testData/diagnostics/testsWithStdLib/experimental/noRetentionBefore.kt
// !USE_EXPERIMENTAL: kotlin.RequiresOptIn
// !LANGUAGE: -ExplicitBinaryRetentionForOptInAnnotations

@RequiresOptIn
annotation <!EXPERIMENTAL_ANNOTATION_WITH_WRONG_RETENTION_WARNING!>class ExperimentalAPI<!>
